--- a/public/404.html
+++ b/public/404.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="ko" dir="ltr" itemscope itemtype="http://schema.org/Article">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head><script src="/workshop-demo/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=workshop-demo/livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Kiyoung Kim">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="404 Page not found :: Microsoft Fabric">
-    <meta property="og:url" content="http://localhost:1313/404.html">
+    <meta property="og:url" content="http://localhost:1313/workshop-demo/404.html">
     <meta property="og:site_name" content="Microsoft Fabric">
     <meta property="og:title" content="404 Page not found :: Microsoft Fabric">
     <meta property="og:locale" content="ko">
     <meta property="og:type" content="website">
     <meta itemprop="name" content="404 Page not found :: Microsoft Fabric">
     <title>404 Page not found :: Microsoft Fabric</title>
-    <base href="http://localhost:1313/">
-    <link href="/images/logo.png" rel="icon" type="image/png">
-    <link href="/css/fontawesome-all.min.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fontawesome-all.min.css" rel="stylesheet"></noscript>
-    <link href="/css/nucleus.css" rel="stylesheet">
-    <link href="/css/auto-complete.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/auto-complete.css" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar.min.css" rel="stylesheet">
-    <link href="/css/fonts.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fonts.css" rel="stylesheet"></noscript>
-    <link href="/css/theme.css" rel="stylesheet">
-    <link href="/css/theme-zen-light.css" rel="stylesheet" id="R-variant-style">
-    <link href="/css/chroma-relearn-light.css" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/css/print.css" rel="stylesheet" media="print">
-    <script src="/js/variant.js"></script>
+    <base href="http://localhost:1313/workshop-demo/">
+    <link href="./images/logo.png" rel="icon" type="image/png">
+    <link href="./css/fontawesome-all.min.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css" rel="stylesheet">
+    <link href="./css/auto-complete.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css" rel="stylesheet">
+    <link href="./css/fonts.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css" rel="stylesheet"></noscript>
+    <link href="./css/theme.css" rel="stylesheet">
+    <link href="./css/theme-zen-light.css" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-light.css" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/print.css" rel="stylesheet" media="print">
+    <script src="./js/variant.js"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
       window.relearn.relBaseUri='.';
-      window.relearn.absBaseUri='http:\/\/localhost:1313';
+      window.relearn.absBaseUri='http:\/\/localhost:1313\/workshop-demo';
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       // variant stuff
@@ -46,7 +46,7 @@
       window.T_N_results_found = `"{0}"에 대해 {1}개의 결과가 검색되었습니다.`;
     </script>
   </head>
-  <body class="mobile-support notfound" data-url="/404.html">
+  <body class="mobile-support notfound" data-url="./404.html">
     <div id="R-body" class="default-animation">
       <main id="R-body-inner" class="highlightable chapter" tabindex="-1">
         <div class="flex-block-wrapper">
@@ -56,7 +56,7 @@
             <p></p>
             <p>존재하지 않는 페이지입니다.</p>
             <p></p>
-            <p><a href="/index.html">메인화면</a></p>
+            <p><a href="./index.html">메인화면</a></p>
             <p id="shrug">
               <svg xmlns="http://www.w3.org/2000/svg"
  viewBox="0 0 512.000000 512.000000"
