--- a/public/search/index.print.html
+++ b/public/search/index.print.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="ko" dir="ltr" itemscope itemtype="http://schema.org/Article">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head><script src="/workshop-demo/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=workshop-demo/livereload" data-no-instant defer></script>
     <meta charset="utf-8">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Kiyoung Kim">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="검색 :: Microsoft Fabric">
-    <meta property="og:url" content="http://localhost:1313/search/index.html">
+    <meta property="og:url" content="http://localhost:1313/workshop-demo/search/index.html">
     <meta property="og:site_name" content="Microsoft Fabric">
     <meta property="og:title" content="검색 :: Microsoft Fabric">
     <meta property="og:locale" content="ko">
     <meta property="og:type" content="website">
     <meta itemprop="name" content="검색 :: Microsoft Fabric">
     <title>검색 :: Microsoft Fabric</title>
-    <link href="http://localhost:1313/search/index.html" rel="canonical" type="text/html" title="검색 :: Microsoft Fabric">
-    <link href="/images/logo.png" rel="icon" type="image/png">
-    <link href="/css/fontawesome-all.min.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fontawesome-all.min.css" rel="stylesheet"></noscript>
-    <link href="/css/nucleus.css" rel="stylesheet">
-    <link href="/css/auto-complete.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/auto-complete.css" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar.min.css" rel="stylesheet">
-    <link href="/css/fonts.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/css/fonts.css" rel="stylesheet"></noscript>
-    <link href="/css/theme.css" rel="stylesheet">
-    <link href="/css/theme-zen-light.css" rel="stylesheet" id="R-variant-style">
-    <link href="/css/chroma-relearn-light.css" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="/css/print.css" rel="stylesheet" media="print">
-    <link href="/css/format-print.css" rel="stylesheet">
-    <script src="/js/variant.js"></script>
+    <link href="http://localhost:1313/workshop-demo/search/index.html" rel="canonical" type="text/html" title="검색 :: Microsoft Fabric">
+    <link href="../images/logo.png" rel="icon" type="image/png">
+    <link href="../css/fontawesome-all.min.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css" rel="stylesheet">
+    <link href="../css/auto-complete.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css" rel="stylesheet">
+    <link href="../css/fonts.css" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css" rel="stylesheet"></noscript>
+    <link href="../css/theme.css" rel="stylesheet">
+    <link href="../css/theme-zen-light.css" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-light.css" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/print.css" rel="stylesheet" media="print">
+    <link href="../css/format-print.css" rel="stylesheet">
+    <script src="../js/variant.js"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
       window.relearn.relBaseUri='..';
-      window.relearn.absBaseUri='http:\/\/localhost:1313';
+      window.relearn.absBaseUri='http:\/\/localhost:1313\/workshop-demo';
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       // variant stuff
@@ -47,7 +47,7 @@
       window.T_N_results_found = `"{0}"에 대해 {1}개의 결과가 검색되었습니다.`;
     </script>
   </head>
-  <body class="mobile-support print" data-url="/search/index.html">
+  <body class="mobile-support print" data-url="../search/index.html">
     <div id="R-body" class="default-animation">
       <div id="R-body-overlay"></div>
       <nav id="R-topbar">
@@ -66,7 +66,7 @@
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList">
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/index.html" title="Microsoft Fabric (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../index.html" title="Microsoft Fabric (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><span class="topbar-control"><i class="fa-fw fas fa-chevron-right"></i></span>
             </div>
@@ -109,8 +109,8 @@
         </div>
       </main>
     </div>
-    <script src="/js/clipboard.min.js" defer></script>
-    <script src="/js/perfect-scrollbar.min.js" defer></script>
-    <script src="/js/theme.js" defer></script>
+    <script src="../js/clipboard.min.js" defer></script>
+    <script src="../js/perfect-scrollbar.min.js" defer></script>
+    <script src="../js/theme.js" defer></script>
   </body>
 </html>
