--- a/public/lakehouse/build_lakehouse/index.print.html
+++ b/public/lakehouse/build_lakehouse/index.print.html
@@ -117,7 +117,7 @@
 
 <h3 id="필수-조건">필수 조건</h3>
 <ul>
-<li>Lakehouse를 만들기 전에 먼저 <a href="http://localhost:1313/workshop-demo/lakehouse/create_workspace/">Fabric 작업 공간을 생성</a>해야 합니다.</li>
+<li>Lakehouse를 만들기 전에 먼저 <a href="http://localhost:1313/workshop-demo/lakehouse/create_workspace/" rel="external" target="_blank">Fabric 작업 공간을 생성</a>해야 합니다.</li>
 <li>CSV 파일을 수집하기 전에 OneDrive를 구성해야 합니다. OneDrive를 구성하지 않은 경우 Microsoft 365 무료 평가판에 등록합니다. <a href="https://www.microsoft.com/microsoft-365/try" rel="external" target="_blank">무료 평가판 - 한 달 동안 Microsoft 365</a>를 사용해 보세요.</li>
 </ul>
 <h2 id="lakehouse-만들기-샘플-데이터-수집-및-보고서-작성">Lakehouse 만들기, 샘플 데이터 수집 및 보고서 작성</h2>
