--- a/public/lakehouse/data_collection/index.html
+++ b/public/lakehouse/data_collection/index.html
@@ -161,7 +161,7 @@
       </div>
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-shortcutmenu-home" class="R-sidebarmenu">
-          <ul class="enlarge morespace collapsible-menu">
+          <ul class="morespace collapsible-menu">
             <li class="" data-nav-id="/accounts/index.html"><a class="padding" href="../../accounts/index.html"><b> </b>무료 평가판 등록</a></li>
             <li class="parent " data-nav-id="/lakehouse/index.html"><input type="checkbox" id="R-section-d3640c8540e6b2deecf6e8c37380481f" aria-controls="R-subsections-d3640c8540e6b2deecf6e8c37380481f" checked><label for="R-section-d3640c8540e6b2deecf6e8c37380481f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">하위 메뉴 Lakehouse</span></label><a class="padding" href="../../lakehouse/index.html"><b> </b>Lakehouse</a><ul id="R-subsections-d3640c8540e6b2deecf6e8c37380481f" class="collapsible-menu">
             <li class="" data-nav-id="/lakehouse/create_workspace/index.html"><a class="padding" href="../../lakehouse/create_workspace/index.html"><b> </b>Fabric 작업영역 만들기</a></li>
