--- a/public/lakehouse/data_prep/index.html
+++ b/public/lakehouse/data_prep/index.html
@@ -161,7 +161,7 @@
       </div>
       <div id="R-content-wrapper" class="highlightable">
         <div id="R-shortcutmenu-home" class="R-sidebarmenu">
-          <ul class="enlarge morespace collapsible-menu">
+          <ul class="morespace collapsible-menu">
             <li class="" data-nav-id="/accounts/index.html"><a class="padding" href="../../accounts/index.html"><b> </b>무료 평가판 등록</a></li>
             <li class="parent " data-nav-id="/lakehouse/index.html"><input type="checkbox" id="R-section-d3640c8540e6b2deecf6e8c37380481f" aria-controls="R-subsections-d3640c8540e6b2deecf6e8c37380481f" checked><label for="R-section-d3640c8540e6b2deecf6e8c37380481f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">하위 메뉴 Lakehouse</span></label><a class="padding" href="../../lakehouse/index.html"><b> </b>Lakehouse</a><ul id="R-subsections-d3640c8540e6b2deecf6e8c37380481f" class="collapsible-menu">
             <li class="" data-nav-id="/lakehouse/create_workspace/index.html"><a class="padding" href="../../lakehouse/create_workspace/index.html"><b> </b>Fabric 작업영역 만들기</a></li>
@@ -171,8 +171,8 @@
             <li class="" data-nav-id="/lakehouse/create_report/index.html"><a class="padding" href="../../lakehouse/create_report/index.html"><b> </b>보고서 작성</a></li>
             <li class="" data-nav-id="/lakehouse/clean_resoruces/index.html"><a class="padding" href="../../lakehouse/clean_resoruces/index.html"><b> </b>리소스 정리</a></li></ul></li>
             <li class="" data-nav-id="/data_science/index.html"><input type="checkbox" id="R-section-fd55b32fae839b713d1749c75fca0488" aria-controls="R-subsections-fd55b32fae839b713d1749c75fca0488"><label for="R-section-fd55b32fae839b713d1749c75fca0488"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">하위 메뉴 Data Science</span></label><a class="padding" href="../../data_science/index.html"><b> </b>Data Science</a><ul id="R-subsections-fd55b32fae839b713d1749c75fca0488" class="collapsible-menu">
-            <li class="" data-nav-id="/data_science/prep-copy/index.html"><a class="padding" href="../../data_science/prep-copy/index.html"><b> </b>시스템 준비</a></li>
-            <li class="" data-nav-id="/data_science/prep/index.html"><a class="padding" href="../../data_science/prep/index.html"><b> </b>시스템 준비</a></li></ul></li>
+            <li class="" data-nav-id="/data_science/prep/index.html"><a class="padding" href="../../data_science/prep/index.html"><b> </b>시스템 준비</a></li>
+            <li class="" data-nav-id="/data_science/data_collection/index.html"><a class="padding" href="../../data_science/data_collection/index.html"><b> </b>데이터 준비</a></li></ul></li>
           </ul>
         </div>
     
